@startuml

title __ANDROIDXIMALAYAFM's Class Diagram__\n

  namespace com.example.androidximalayafm {
    class com.example.androidximalayafm.BaseActivity {
    }
  }
  

  namespace com.example.androidximalayafm {
    class com.example.androidximalayafm.DetailActivity {
        - TAG : String
        - mAlbumAuthor : TextView
        - mAlbumTitle : TextView
        - mCurrentAlbumId : int
        - mCurrentPage : int
        - mDetailList : RecyclerView
        - mDetailListContainer : FrameLayout
        - mLargeCover : ImageView
        + onAlbumLoaded()
        + onDetailListLoaded()
        + onItemClick()
        + onNetworkError()
        + onRetryClick()
        # onCreate()
        - createSuccessView()
        - initView()
    }
  }
  

  namespace com.example.androidximalayafm {
    class com.example.androidximalayafm.MainActivity {
        ~ mContentPager : ViewPager
        {static} - TAG : String
        - mMagicIndicator : MagicIndicator
        # onCreate()
        - initEvent()
        - initView()
    }
  }
  

  namespace com.example.androidximalayafm {
    class com.example.androidximalayafm.PlayerActivity {
        {static} - TAG : String
        - mControlBtn : ImageView
        - mCurrentPosition : TextView
        - mCurrentProgress : int
        - mDurationBar : SeekBar
        - mHourFormat : SimpleDateFormat
        - mIsUserTouchProgressBar : boolean
        - mMinFormat : SimpleDateFormat
        - mTotalDuration : TextView
        + onAdFinished()
        + onAdLoading()
        + onListLoaded()
        + onNextPlay()
        + onPlayError()
        + onPlayModeChange()
        + onPlayPause()
        + onPlayStart()
        + onPlayStop()
        + onPrePlay()
        + onProgressChange()
        # onCreate()
        # onDestroy()
        - initEvent()
        - initView()
        - startPlay()
    }
  }
  

  com.example.androidximalayafm.BaseActivity -up-|> androidx.fragment.app.FragmentActivity
  com.example.androidximalayafm.DetailActivity .up.|> com.example.androidximalayafm.adapters.DetailListAdapter.ItemClickListener
  com.example.androidximalayafm.DetailActivity .up.|> com.example.androidximalayafm.interfaces.IAlbumDetailViewCallback
  com.example.androidximalayafm.DetailActivity .up.|> com.example.androidximalayafm.views.UILoader.OnRetryClickListener
  com.example.androidximalayafm.DetailActivity -up-|> com.example.androidximalayafm.BaseActivity
  com.example.androidximalayafm.DetailActivity o-- com.example.androidximalayafm.presenters.AlbumDetailPresenter : mAlbumDetailPresenter
  com.example.androidximalayafm.DetailActivity o-- com.example.androidximalayafm.adapters.DetailListAdapter : mDetailListAdapter
  com.example.androidximalayafm.DetailActivity o-- com.example.androidximalayafm.views.RoundRectImageView : mSmallCover
  com.example.androidximalayafm.DetailActivity o-- com.example.androidximalayafm.views.UILoader : mUiLoader
  com.example.androidximalayafm.MainActivity -up-|> androidx.fragment.app.FragmentActivity
  com.example.androidximalayafm.MainActivity o-- com.example.androidximalayafm.adapters.IndicatorAdapter : mIndicatorAdapter
  com.example.androidximalayafm.PlayerActivity .up.|> com.example.androidximalayafm.interfaces.IPlayerCallback
  com.example.androidximalayafm.PlayerActivity -up-|> com.example.androidximalayafm.BaseActivity
  com.example.androidximalayafm.PlayerActivity o-- com.example.androidximalayafm.presenters.PlayerPresenter : mPlayerPresenter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
